<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ControlActivity"
    tools:layout_editor_absoluteY="25dp">

    <Button
        android:id="@+id/button10"
        android:layout_width="63dp"
        android:layout_height="94dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="64dp"
        android:onClick="yuntairight"
        android:text="@string/right"
        android:textSize="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="1.0" />

    <com.example.muyun.mycar.RockerView
        android:id="@+id/yuntaiView"
        android:layout_width="226dp"
        android:layout_height="220dp"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        app:layout_constraintVertical_bias="1.0" />

    <android.support.v7.widget.Toolbar
        android:id="@+id/control_toolbar"
        android:layout_width="0dp"
        android:layout_height="71dp"
        android:background="@color/colortoolbar"
        android:minHeight="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/app_control"
        app:titleTextColor="@color/colorlightblue"
        tools:ignore="MissingConstraints">

    </android.support.v7.widget.Toolbar>

    <Button
        android:id="@+id/button9"
        android:layout_width="64dp"
        android:layout_height="94dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="64dp"
        android:onClick="yuntaileft"
        android:text="@string/left"
        android:textSize="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/yuntaiView"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="21dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/yuntai"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.831"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <WebView
        android:id="@+id/webView"
        android:layout_width="0dp"
        android:layout_height="294dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/control_toolbar" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="134dp"
        android:layout_height="80dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:checkedButton="@+id/lowspeed"
        android:longClickable="false"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4">

        <RadioButton
            android:id="@+id/highspeed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:text="高速档" />

        <RadioButton
            android:id="@+id/lowspeed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:clickable="true"
            android:text="低速档" />
    </RadioGroup>

    <Button
        android:id="@+id/button"
        android:layout_width="135dp"
        android:layout_height="45dp"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="8dp"
        android:onClick="connect"
        android:text="建立连接"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/webView" />

    <Button
        android:id="@+id/button2"
        android:layout_width="135dp"
        android:layout_height="40dp"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="8dp"
        android:onClick="open"
        android:text="开灯"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <Button
        android:id="@+id/button3"
        android:layout_width="135dp"
        android:layout_height="40dp"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="4dp"
        android:onClick="close"
        android:text="关灯"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <Button
        android:id="@+id/button4"
        android:layout_width="135dp"
        android:layout_height="45dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:onClick="closeconnect"
        android:text="断开连接"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/webView" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Switch"
        tools:layout_editor_absoluteX="170dp"
        tools:layout_editor_absoluteY="410dp" />


</android.support.constraint.ConstraintLayout>